# pricepilot-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  smithery.yaml
pricepilot_mcp/: __init__.py  __main__.py  benchmark_data.py  benchmark_transformer.py  config.py  db.py  models.py  server.py
